--- a/src/index.html
+++ b/src/index.html
@@ -34,6 +34,9 @@
             <a href="#">Active</a>
             <a href="#">Complete</a>
           </div>
+          <div class="clear-list">
+            <a href="#">Clear all</a>
+          </div>
         </div>
       </div>
     </main>
