--- a/src/index.html
+++ b/src/index.html
@@ -11,21 +11,39 @@
 </head>
 
 <body>
-  <div class="page-home">
-    <header class="header">
-      <h1>Todos</h1>
+  <div class="page">
+    <header class="page__header">
+      <h1>todos</h1>
     </header>
 
-    <main>
-      <div class="todo-card">
-        <div class="item-input">
-          <input type="text" class='input-box'  placeholder="What needs to be done?">
-        </div>
-        <div class="single-item">
-          <input class="item-checkbox" type="checkbox" id="" name="" value="">
-          <p class="item-text">Walk the dog</p>
-        </div>
-        <div class="card-footer">
+    <main class="page__main">
+
+      <div class="todo-app">
+        <header class="todo-app__header">
+          <div class="item-input">
+            <input type="text" class='input-box' placeholder="What needs to be done?">
+          </div>
+        </header>
+
+        <ul class="todo-app__items">
+          <li class="todo-app-item todo-app-item--completed">
+            <input class="todo-app-item__toggle" type="checkbox" checked />
+            <label class="todo-app-item__title">Walk the dog</label>
+            <button class="todo-app-item__delete-button"></button>
+          </li>
+          <li class="todo-app-item">
+            <input class="todo-app-item__toggle" type="checkbox" />
+            <label class="todo-app-item__title">Drink water</label>
+            <button class="todo-app-item__delete-button"></button>
+          </li>
+          <li class="todo-app-item">
+            <input class="todo-app-item__toggle" type="checkbox" />
+            <label class="todo-app-item__title">Get milk</label>
+            <button class="todo-app-item__delete-button"></button>
+          </li>
+        </ul>
+
+        <footer class="todo-app__footer">
           <div class="remaining-items">
             <p>1 Item left</p>
           </div>
@@ -37,11 +55,14 @@
           <div class="clear-list">
             <a href="#">Clear all</a>
           </div>
-        </div>
+        </footer>
       </div>
+
     </main>
 
-    <footer></footer>
+    <footer class="page__footer">
+      main page footer content goes here
+    </footer>
   </div>
 </body>
 
