--- a/src/index.html
+++ b/src/index.html
@@ -5,20 +5,64 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title></title>
+  <title>Todo</title>
 
   <link rel="stylesheet" href="./index.scss">
 </head>
 
 <body>
-  <div class="page-home">
-    <header>
-      <h1>Hello World!</h1>
+  <div class="page">
+    <header class="page__header">
+      <h1>todos</h1>
     </header>
 
-    <main></main>
+    <main class="page__main">
 
-    <footer></footer>
+      <div class="todo-app">
+        <header class="todo-app__header">
+          <div class="item-input">
+            <input type="text" class='input-box' placeholder="What needs to be done?">
+          </div>
+        </header>
+
+        <ul class="todo-app__items">
+          <li class="todo-app-item todo-app-item--completed">
+            <input class="todo-app-item__toggle" type="checkbox" checked />
+            <label class="todo-app-item__title">Walk the dog</label>
+            <button class="todo-app-item__delete-button"></button>
+          </li>
+          <li class="todo-app-item">
+            <input class="todo-app-item__toggle" type="checkbox" />
+            <label class="todo-app-item__title">Drink water</label>
+            <button class="todo-app-item__delete-button"></button>
+          </li>
+          <li class="todo-app-item">
+            <input class="todo-app-item__toggle" type="checkbox" />
+            <label class="todo-app-item__title">Get milk</label>
+            <button class="todo-app-item__delete-button"></button>
+          </li>
+        </ul>
+
+        <footer class="todo-app__footer">
+          <div class="remaining-items">
+            <p>1 Item left</p>
+          </div>
+          <div class="item-filter">
+            <a href="#">All</a>
+            <a href="#">Active</a>
+            <a href="#">Complete</a>
+          </div>
+          <div class="clear-list">
+            <a href="#">Clear all</a>
+          </div>
+        </footer>
+      </div>
+
+    </main>
+
+    <footer class="page__footer">
+      main page footer content goes here
+    </footer>
   </div>
 </body>
 
