--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
   <title>Todo</title>
 
   <link rel="stylesheet" href="./index.scss">
+  <script type="text/javascript" src="./index.js" defer></script>
 </head>
 
 <body>
@@ -25,32 +26,25 @@
           </div>
         </header>
 
+        <template name="todo-app-item">
+          <li class="todo-app-item">
+            <input aria-label="Toggle" class="todo-app-item__toggle" type="checkbox" />
+            <label aria-label="Title" class="todo-app-item__title"></label>
+            <button aria-label="Delete" class="todo-app-item__delete-button"></button>
+          </li>
+        </template>
+
         <ul class="todo-app__items">
-          <li class="todo-app-item todo-app-item--completed">
-            <input class="todo-app-item__toggle" type="checkbox" checked />
-            <label class="todo-app-item__title">Walk the dog</label>
-            <button class="todo-app-item__delete-button"></button>
-          </li>
-          <li class="todo-app-item">
-            <input class="todo-app-item__toggle" type="checkbox" />
-            <label class="todo-app-item__title">Drink water</label>
-            <button class="todo-app-item__delete-button"></button>
-          </li>
-          <li class="todo-app-item">
-            <input class="todo-app-item__toggle" type="checkbox" />
-            <label class="todo-app-item__title">Get milk</label>
-            <button class="todo-app-item__delete-button"></button>
-          </li>
         </ul>
 
-        <footer class="todo-app__footer">
+        <footer aria-label="Footer" class="todo-app__footer">
           <div class="remaining-items">
             <p>1 Item left</p>
           </div>
-          <div class="item-filter">
-            <a href="#">All</a>
-            <a href="#">Active</a>
-            <a href="#">Complete</a>
+          <div class="filters">
+            <a href="#" class="filters__item filters__item--selected">All</a>
+            <a href="#" class="filters__item">Active</a>
+            <a href="#" class="filters__item">Complete</a>
           </div>
           <div class="clear-list">
             <a href="#">Clear all</a>
