--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -7,9 +6,9 @@
     <meta name="description" content="TodoMVC Styling" />
 
     <title>TodoMVC</title>
-    <link rel="stylesheet" href="./components/common.css" />
-    <link rel="stylesheet" href="./components/common-dark-mode.css" />
-    <link rel="stylesheet" href="./components/common-sunset-mode.css" />
+    <link rel="stylesheet" href="./components/common.css" ></link>
+    <link rel="stylesheet" href="./components/common-dark-mode.css" ></link>
+    <link rel="stylesheet" href="./components/common-sunset-mode.css" ></link>
 
   </head>
 
@@ -18,6 +17,6 @@
     <script crossorigin type="text/javascript" src="https://unpkg.com/react@17/umd/react.development.js"></script>
     <script crossorigin type="text/javascript" src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
     <script crossorigin type="text/javascript" src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
-    <script type="text/babel" src="./../components/react-simple.js"></script>
+    <script type="text/babel" src="./react-simple.js"></script>
   </body>
 </html>
