--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="TodoMVC Styling" />
+    <meta name="description" content="TodoMVC" />
 
     <title>TodoMVC</title>
     <link rel="stylesheet" href="./components/common.css" ></link>
@@ -13,10 +13,6 @@
   </head>
 
   <body>
-    <!--     <div id="root"></div> -->
-    <script crossorigin type="text/javascript" src="https://unpkg.com/react@17/umd/react.development.js"></script>
-    <script crossorigin type="text/javascript" src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
-    <script crossorigin type="text/javascript" src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
-    <script type="text/babel" src="./react-simple.js"></script>
+    <script type="text/javascript" src="./index.js"></script>
   </body>
 </html>
